[gd_scene load_steps=52 format=2]

[ext_resource path="res://player/Dash.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/sprites/RUN (3).png" type="Texture" id=2]
[ext_resource path="res://player/sprites/RUN (4).png" type="Texture" id=3]
[ext_resource path="res://player/sprites/RUN (5).png" type="Texture" id=4]
[ext_resource path="res://player/sprites/IDDLE (3).png" type="Texture" id=5]
[ext_resource path="res://player/sprites/ATTACK (6).png" type="Texture" id=6]
[ext_resource path="res://player/sprites/ATTACK.png" type="Texture" id=7]
[ext_resource path="res://player/sprites/RUN (2).png" type="Texture" id=8]
[ext_resource path="res://player/sprites/ATTACK (2).png" type="Texture" id=9]
[ext_resource path="res://player/sprites/IDDLE (2).png" type="Texture" id=10]
[ext_resource path="res://player/sprites/IDDLE (4).png" type="Texture" id=11]
[ext_resource path="res://player/sprites/ATTACK (3).png" type="Texture" id=12]
[ext_resource path="res://player/sprites/ATTACK (4).png" type="Texture" id=13]
[ext_resource path="res://player/sprites/IDDLE.png" type="Texture" id=14]
[ext_resource path="res://player/sprites/ATTACK (5).png" type="Texture" id=15]
[ext_resource path="res://player/sprites/RUN.png" type="Texture" id=16]
[ext_resource path="res://player/sprites/RUN (7).png" type="Texture" id=17]
[ext_resource path="res://player/sprites/RUN (6).png" type="Texture" id=18]
[ext_resource path="res://player/sprites/RUN (8).png" type="Texture" id=19]
[ext_resource path="res://player/sprites/RUN (9).png" type="Texture" id=20]
[ext_resource path="res://player/sprites/RUN (10).png" type="Texture" id=21]
[ext_resource path="res://player/sprites/RUN (11).png" type="Texture" id=22]
[ext_resource path="res://player/sprites/RUN (12).png" type="Texture" id=23]
[ext_resource path="res://player/sprites/gothic-hero-crouch-slash_0001_Layer-2.png" type="Texture" id=24]
[ext_resource path="res://player/sprites/gothic-hero-crouch-slash_0002_Layer-3.png" type="Texture" id=25]
[ext_resource path="res://player/sprites/gothic-hero-crouch-slash_0000_Layer-1.png" type="Texture" id=26]
[ext_resource path="res://player/Player.gd" type="Script" id=27]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=28]
[ext_resource path="res://Hitboxes and Hurtboxes/SwordHitbox.gd" type="Script" id=29]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=30]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "iddle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "iddle"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "take_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=10]
states/attack/node = SubResource( 17 )
states/attack/position = Vector2( 580, 56 )
states/iddle/node = SubResource( 8 )
states/iddle/position = Vector2( 369, 56 )
states/run/node = SubResource( 9 )
states/run/position = Vector2( 369, 196 )
states/take_damage/node = SubResource( 18 )
states/take_damage/position = Vector2( 108, 56 )
transitions = [ "iddle", "run", SubResource( 13 ), "run", "iddle", SubResource( 16 ), "iddle", "attack", SubResource( 19 ), "attack", "iddle", SubResource( 20 ), "iddle", "take_damage", SubResource( 21 ), "run", "attack", SubResource( 23 ), "attack", "run", SubResource( 24 ) ]
start_node = "iddle"
end_node = "take_damage"
graph_offset = Vector2( 7.55227, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="CapsuleShape2D" id=26]
height = 12.0

[sub_resource type="CapsuleShape2D" id=25]
radius = 16.78
height = 10.43

[sub_resource type="CapsuleShape2D" id=27]

[node name="Player" type="KinematicBody2D"]
collision_layer = 34
collision_mask = 0
script = ExtResource( 27 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/iddle = SubResource( 4 )
anims/run = SubResource( 5 )
anims/take_damage = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="Dash" parent="." instance=ExtResource( 1 )]

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 16 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 26 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 28 )]
position = Vector2( 4, 0 )
collision_mask = 8
script = ExtResource( 29 )
damage = 50

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
position = Vector2( 28, 8 )
shape = SubResource( 25 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 30 )]
collision_layer = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 2, -11 )
shape = SubResource( 27 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
